refactor: cambios (nombres de variables, ciclos for-each) en base al estandar